# flamingo

./: .gitignore  CMakeLists.txt  CentOS7关闭防火墙方法.txt  README.md  build.sh  start.sh  table.sql  服务器端更新日志.txt
ChatServer/: BussinessLogic.cpp  BussinessLogic.h  CMakeLists.txt  ChatServer.cpp  ChatServer.h  ChatSession.cpp  ChatSession.h  HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h  MonitorServer.cpp  MonitorServer.h  MonitorSession.cpp  MonitorSession.h  MsgCacheManager.cpp  MsgCacheManager.h  TcpSession.cpp  TcpSession.h  UserManager.cpp  UserManager.h  main.cpp
FileServer/: CMakeLists.txt  FileManager.cpp  FileManager.h  FileServer.cpp  FileServer.h  FileSession.cpp  FileSession.h  TcpSession.cpp  TcpSession.h  main.cpp
ImgServer/: CMakeLists.txt  main.cpp
base/: AsyncLog.cpp  AsyncLog.h  CMakeLists.txt  ConfigFileReader.cpp  ConfigFileReader.h  CountDownLatch.cpp  CountDownLatch.h  DatabaseMysql.cpp  DatabaseMysql.h  Field.cpp  Field.h  Logger.cpp  Logger.h  MysqlManager.cpp  MysqlManager.h  MysqlTask.h  MysqlThrd.cpp  MysqlThrd.h  MysqlThrdMgr.cpp  MysqlThrdMgr.h  Noncopyable.h  Platform.cpp  Platform.h  QueryResult.cpp  QueryResult.h  RAIIWrapper.h  Singleton.h  TaskList.cpp  TaskList.h  Timestamp.cpp  Timestamp.h
chatserversrc/: BussinessLogic.cpp  BussinessLogic.h  ChatServer.cpp  ChatServer.h  ChatSession.cpp  ChatSession.h  HttpMsg.h  HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h  MonitorServer.cpp  MonitorServer.h  MonitorSession.cpp  MonitorSession.h  Msg.h  MsgCacheManager.cpp  MsgCacheManager.h  TcpSession.cpp  TcpSession.h  UserManager.cpp  UserManager.h  main.cpp
etc/: chatserver.conf  fileserver.conf  imgserver.conf
fileserversrc/: FileManager.cpp  FileManager.h  FileMsg.h  FileServer.cpp  FileServer.h  FileSession.cpp  FileSession.h  TcpSession.cpp  TcpSession.h  main.cpp
imgserversrc/: main.cpp
jsoncpp1.9.0/: json.h
mysqlapi/: DatabaseMysql.cpp  Field.cpp  QueryResult.cpp  QueryResult.h
mysqlmgr/: MysqlManager.cpp  MysqlManager.h  MysqlThrd.cpp  MysqlThrd.h  MysqlThrdMgr.cpp  TaskList.cpp  TaskList.h
net/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Callbacks.h  Channel.cpp  Channel.h  Connector.cpp  Connector.h  Endian.h  EpollPoller.cpp  EpollPoller.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  InetAddress.cpp  InetAddress.h  PollPoller.cpp  PollPoller.h  Poller.h  ProtocolStream.cpp  ProtocolStream.h  SelectPoller.cpp  SelectPoller.h  Sockets.cpp  Sockets.h  TcpClient.cpp  TcpClient.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  Timer.cpp  Timer.h  TimerId.h  TimerQueue.cpp  (+1 more)
utils/: CMakeLists.txt  (+12 more)
(+2 files in other folders)
